2004-01-10  Adam Fedor  <fedor@gnu.org>

	* Source/x11/XGServerWindow.m ([XGServer -orderwindow:::]): 
	When otherWin == 0, make sure the window does not go in front
	of the current key window.

	* Source/win32/WIN32Server.m ([WIN -orderwindow:op:otherWin:winNum]): 
	Allow otherWin < 0.

2004-01-10 16:25  Alexander Malmberg <alexander@malmberg.org>

	* Source/art/blit.m: Replace uses DI_16_B5G5R5A1 and DI_16_B5G6R5
	with uses of DI_16_B5_G5_R5_A1 and DI_16_B5_G6_R5.
	(sover_ao): Add an optimized version for the 16/15 bpp modes.
	(satop_aa): Simplify calculation of da'.
	(datop_aa): Simplify calculation of da'. Fix the rounding.
	(xor_aa): Fix the rounding.
	(DI_16_B5_G5_R5_A1, DI_16_B5_G6_R5): Unpack pixels in a more
	efficient way.

	* Source/art/blit_scrapheap.m: New file.

2004-01-07 14:51  Alexander Malmberg <alexander@malmberg.org>

	* Source/art/composite.m (-_composite_func::::::): If the source has
	alpha, the destination is opaque, and the operator is NSCompositeCopy,
	set dst_needs_alpha to YES.

	(-compositerect:op:): If alpha is needed, make sure alpha is always
	created _before_ setting up the alpha destination pointers. Only
	write alpha for NSCompositeCopy if the current color isn't opaque.

2004-01-07  Fred Kiefer <FredKiefer@gmx.de>

	Added missing .cvsignore files and extended the existing ones.
	
2003-12-31  Fred Kiefer <FredKiefer@gmx.de>

	* Tools/win32pbs.m New file to handle windows clipboard
	interaction.
	* Tools/GNUmakefile
	Compile new file for windows backend.
	* Tools/gpbs.m (PasteboardServer -init) for windows backends use
	Win32PbOwner as the pasteboard owner class.	
	
2003-12-30  Fred Kiefer <FredKiefer@gmx.de>

	* Source/gsc/path.m (-GSSendBezierPath:) preset the count
	variable, as this is expected by the method [NSBezierPath
	getLineDash:count:phase:]. 
	* Source/xlib/XGGState.m (-_doPath::draw:) allways set fill rule
	for path_fill.

2003-12-30  Fred Kiefer <FredKiefer@gmx.de>

	* Source/art/path.m (-DPSrectstroke::::,